# pysptag

./: .gitignore  BALANCED_KMEANS_IMPLEMENTATION.md  BKT_RNG_FINDINGS.md  CHANGES.md  CLUSTERING_BKTREE_RNG_ANALYSIS.md  COHERE_90_PERCENT_RECALL.md  COMPARISON.md  CURRENT_STATUS.md  DISK_BASED_TESTING.md  DISK_IO_OPTIMIZATION.md  EC2_SETUP.md  EC2_TESTING.md  FINAL_RESULTS.md  FINAL_SOLUTION.md  LATENCY_OPTIMIZATION.md  LATENCY_OPTIMIZATION_COMPLETE.md  METRIC_SUPPORT.md  MISSING_OPTIMIZATIONS.md  MULTIBIT_STATUS_FEB12.md  NPA_BOUNDARY_PARTITION_ANALYSIS.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PHASE1_OPTIMIZATIONS_COMPLETE.md  PROJECT_SUMMARY.md  QUERY_AWARE_PRUNING_ANALYSIS.md  RABITQ_FORMULA_CORRECT.md  RABITQ_MULTIBIT_STATUS.md  README.md  RNG_FILTERING_IMPLEMENTATION.md  RUN_ON_EC2.md  SPANN_RABITQ_EXPLAINED.md  SPTAG_ANALYSIS.md  SPTAG_DEEP_ANALYSIS.md  benchmark_batch.py  benchmark_cohere1m_ec2.py  benchmark_ec2_final.py  benchmark_hbc_10m.py  benchmark_numba.py  benchmark_optimization.py  benchmark_optimizations.py  (+96 more)
examples/: basic_usage.py
rust_io/: Cargo.toml
rust_io/src/: lib.rs
spann_index/: metadata.pkl
src/: __init__.py
src/clustering/: __init__.py  balanced_kmeans.py  base.py  hierarchical.py  kmeans.py  lambda_kmeans.py  rng_assignment.py  tree_assignment.py
src/core/: bktree.py  bktree_complete.py  bktree_rng_search.py  bktree_search.py  bktree_sptag.py  kdtree.py  posting_record.py  rng.py  sptag_params.py  version_map.py
src/utils/: io.py
test_kmeans/: metadata.pkl
test_optimized/: metadata.pkl
test_original/: metadata.pkl
(+37 files in other folders)
