[package]
name = "fast_io"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_io"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
libc = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
# SIMD support for x86_64

[target.'cfg(target_arch = "aarch64")'.dependencies]
# SIMD support for ARM (Apple Silicon)
